test: Add unsafe maths

--- a/tests/consttime/analyse.ipynb
+++ b/tests/consttime/analyse.ipynb
@@ -23,7 +23,7 @@
     "- Disable turboboost (check `intel_pstate` is the active driver with `cat /sys/devices/system/cpu/cpu*/cpufreq/scaling_driver`; then execute `echo \"1\" | sudo tee /sys/devices/system/cpu/intel_pstate/no_turbo`; revert after measurement)\n",
     "- Fix the frequency of some core using `cpupower frequency-set -d 1900Mhz`\n",
     "- Set `echo 1000000 > /proc/sys/kernel/sched_rt_runtime_us` to enable real-time process to use 100% of CPU (no scheduling)\n",
-    "- Start the process with `taskset 0x2 chrt -f 99 php tests/consttime/collect.php` (run on core 0 or 1 with high priority)"
+    "- Start the process with `taskset --cpu-list 2 chrt -f 99 php tests/consttime/collect.php` (run on core 0 or 1 with high priority)"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "  with open(file_path, 'r') as f:\n",
     "    return json.load(f)\n",
     "\n",
-    "data = load_json_from_file('measurements/SW_QT_ANeg3_Math_brainpool_p192r1_100.json')"
+    "data = load_json_from_file('measurements/EDMath_ed448_400.json')"
    ],
    "outputs": [],
    "execution_count": null
@@ -237,7 +237,7 @@
    "cell_type": "code",
    "source": [
     "def get_measurements_per_flag(samples):\n",
-    "    measurements_per_flag = {'NONE': []}\n",
+    "    measurements_per_flag = {'Basic': []}\n",
     "    for sample in samples:\n",
     "        for flag in sample['flags']:\n",
     "            if flag not in measurements_per_flag:\n",
@@ -249,10 +249,10 @@
     "            measurements.append(measurement['time'])\n",
     "\n",
     "        if len(sample['flags']) == 0:\n",
-    "            measurements_per_flag['NONE'].extend(measurements)\n",
+    "            measurements_per_flag['Basic'].extend(measurements)\n",
     "\n",
     "        for flag in sample['flags']:\n",
-    "            measurements_per_flag[flag].extend(measurements)\n",
+    "                measurements_per_flag[flag].extend(measurements)\n",
     "\n",
     "    return measurements_per_flag"
    ],
@@ -290,11 +290,8 @@
     "\n",
     "\n",
     "for flag in measurements_per_flag:\n",
-    "    if flag == 'NONE':\n",
-    "        continue\n",
-    "\n",
     "    # equal_var=False ensures we do not assume equal variance between the two testsets\n",
-    "    result=ss.ttest_ind(measurements_per_flag['NONE'], measurements_per_flag[flag], axis=0, equal_var=False)\n",
+    "    result=ss.ttest_ind(measurements_per_flag['Basic'], measurements_per_flag[flag], axis=0, equal_var=False)\n",
     "    print(f\"P-value {flag}: {result.pvalue}\")"
    ],
    "outputs": [],
@@ -358,12 +355,12 @@
     "    return __builtins__.sum((x - avg) ** 2 for x in values) / len(values)\n",
     "\n",
     "baseline = get_all_measurements(cleaned_samples)\n",
-    "print(f\"baseline:\\t avg {average(baseline)}\\t var{variance(baseline)}\")\n",
+    "print(f\"baseline:\\t avg {average(baseline)}\\t var {variance(baseline)}\")\n",
     "for sample in measurements_per_sample:\n",
     "    # equal_var=False ensures we do not assume equal variance between the two testsets\n",
     "    result=ss.ttest_ind(baseline, measurements_per_sample[sample], axis=0, equal_var=False)\n",
     "\n",
-    "    print(f\"{sample}:\\t avg {average(measurements_per_sample[sample])}\\t var{variance(measurements_per_sample[sample])}\\t p={result.pvalue}\")"
+    "    print(f\"{sample}:\\t avg {average(measurements_per_sample[sample])}\\t var {variance(measurements_per_sample[sample])}\\t p={result.pvalue}\")"
    ],
    "outputs": [],
    "execution_count": null
