doc: Document how to perform the assessment

--- a/tests/consttime/analyse.ipynb
+++ b/tests/consttime/analyse.ipynb
@@ -154,7 +154,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "**Check the graph.** If the measurement is accurate, then for each iteration, the timings are the same."
+   "source": "**Check the graph.** If the measurement is accurate, then for each iteration, the timings are the same. Concretely, you should see a graph that is essentially just noise."
   },
   {
    "metadata": {},
@@ -182,7 +182,7 @@
     "\n",
     "To avoid side-effects in between the testcases (e.g. by the branch predictor or other forms of caching), we randomize the order of the testcases for each iteration. If the randomization is non-biased, and caching is successfully made irrelevant, then for each testcase index the measurement should be the same.\n",
     "\n",
-    "**Check the graph.** If the measurement is accurate, then for each test index, the timings are the same."
+    "**Check the graph.** If the measurement is accurate, then for each iteration, the timings are the same. Concretely, you should see a graph that is essentially just noise."
    ]
   },
   {
@@ -229,7 +229,11 @@
    "source": [
     "### 3.1. Measurements per flag\n",
     "\n",
-    "We quantify by flag. Flags usually indicate the type of the testcase, possibly special chosen (e.g. to multiply by 0 or similar). Note that not all testsets have a lot (of useful) flags."
+    "We quantify by flag. Flags usually indicate the type of the testcase, possibly special chosen (e.g. to multiply by 0 or similar). Note that not all testsets have a lot (of useful) flags.\n",
+    "\n",
+    "**Check the graphs.** If the implementation is const-time, then all test-cases should have similar timing. You should not see any \"steps\", and no trends based on the flags (i.e. testcases attributed to some flag consistently perform faster than the rest).\n",
+    "\n",
+    "**Check the p-values.** If the visual assessment looks good, check that also the p-values are high (i.e. > 0.05)."
    ]
   },
   {
@@ -303,7 +307,11 @@
    "source": [
     "## 3.2. Measurement per sample\n",
     "\n",
-    "We quantify by testcase.\n"
+    "We quantify by testcase.\n",
+    "\n",
+    "**Check the graphs.** If the implementation is const-time, then all test-cases should have similar timing. You should not see different vertical groups of test-cases.\n",
+    "\n",
+    "**Check the p-values.** If the visual assessment looks good, check that also the p-values are high (i.e. > 0.05)."
    ]
   },
   {
