--- a/tests/consttime/analyse.ipynb
+++ b/tests/consttime/analyse.ipynb
@@ -23,7 +23,7 @@
     "- Disable turboboost (check `intel_pstate` is the active driver with `cat /sys/devices/system/cpu/cpu*/cpufreq/scaling_driver`; then execute `echo \"1\" | sudo tee /sys/devices/system/cpu/intel_pstate/no_turbo`; revert after measurement)\n",
     "- Fix the frequency of some core using `cpupower frequency-set -d 1900Mhz`\n",
     "- Set `echo 1000000 > /proc/sys/kernel/sched_rt_runtime_us` to enable real-time process to use 100% of CPU (no scheduling)\n",
-    "- Start the process with `taskset --cpu-list 2 chrt -f 99 php tests/consttime/collect.php` (run on core 2 as a real-time process)"
+    "- Start the process with `taskset --cpu-list 2 chrt -f 99 php tests/consttime/bin.php` (run on core 2 as a real-time process)"
    ]
   },
   {
