test: Cluster measurements

--- a/tests/consttime/analyse.ipynb
+++ b/tests/consttime/analyse.ipynb
@@ -62,8 +62,8 @@
    "cell_type": "code",
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import scipy.stats as ss\n",
-    "import json"
+    "import json\n",
+    "import math as mathlib\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -97,7 +97,7 @@
     "  with open(file_path, 'r') as f:\n",
     "    return json.load(f)\n",
     "\n",
-    "data = load_json_from_file('measurements/EDMath_ed448_400.json')"
+    "data = load_json_from_file('measurements/MG_TwED_ANeg1_Math_curve25519_400.json')"
    ],
    "outputs": [],
    "execution_count": null
@@ -218,10 +218,17 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### 3. Assess measurement result\n",
+    "### 3. Assess const-time\n",
     "\n",
     "If chapter 2 does not show signs of a botched measurement, we can now proceed to assess the measurement result."
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "import scipy.stats as ss",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -345,7 +352,7 @@
     "plt.title(data['curve'] + ' using math ' + data['math'] + ' per sample')\n",
     "plt.xlabel('sample')\n",
     "plt.ylabel('time')\n",
-    "plt.legend()\n",
+    "plt.legend(ncol=3)\n",
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(14, 5))\n",
@@ -372,6 +379,157 @@
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 4. Assess impact\n",
+    "\n",
+    "If chapter 3 shows some evidence of non-const time behaviour, we assess here the impact."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from scipy.cluster.vq import kmeans, vq\n",
+    "import numpy as np"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 4.1 Cluster non-const time behaviour\n",
+    "\n",
+    "We now separate the samples into the baseline (i.e. operating on essentially random data) from the other samples that are showing non-const time behaviour.\n",
+    "\n",
+    "**Decide number of clusters.** Based on the graphs in chapter 3, define the number of clusters using `expected_clusters` that need to be separated from each other.\n",
+    "\n",
+    "**Check graph that clusters are well separated.** Check the graph to be sure that the clusers have been properly identified. Else, adjust the clusters manually."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def get_average_per_sample(measurements_per_sample):\n",
+    "    result = {}\n",
+    "    for sample in measurements_per_sample:\n",
+    "        result[sample] = average(measurements_per_sample[sample])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def cluster_averages(averages_per_sample, clusers_count):\n",
+    "    # Calculate averages for each array\n",
+    "    names = list(averages_per_sample.keys())\n",
+    "    averages = np.array([arr for arr in averages_per_sample.values()])\n",
+    "\n",
+    "    # Reshape averages for clustering\n",
+    "    data = averages.reshape(-1, 1)\n",
+    "\n",
+    "    # Perform k-means clustering\n",
+    "    centroids, _ = kmeans(data, clusers_count, iter=1000, rng=42)\n",
+    "\n",
+    "    # Assign points to clusters\n",
+    "    labels, _ = vq(data, centroids)\n",
+    "\n",
+    "    # Create groups dictionary\n",
+    "    groups = {i: [] for i in range(clusers_count)}\n",
+    "    group_averages = {i: [] for i in range(clusers_count)}\n",
+    "\n",
+    "    # Assign arrays to groups\n",
+    "    for name, avg, label in zip(names, averages, labels):\n",
+    "        groups[label].append(name)\n",
+    "        group_averages[label].append(avg)\n",
+    "\n",
+    "    # Create final sorted groups\n",
+    "    sorted_groups = {}\n",
+    "    for i in range(clusers_count):\n",
+    "        mean_of_group = np.mean(group_averages[i])\n",
+    "        sorted_groups[i] = {\n",
+    "            'members': groups[i],\n",
+    "            'mean': mean_of_group,\n",
+    "            'std': np.std(group_averages[i])\n",
+    "        }\n",
+    "\n",
+    "    # Sort groups by mean value\n",
+    "    return dict(sorted(sorted_groups.items(), key=lambda x: x[1]['mean']))\n",
+    "\n",
+    "expected_clusters = 3\n",
+    "average_per_sample = get_average_per_sample(measurements_per_sample)\n",
+    "clusters = cluster_averages(average_per_sample, expected_clusters)\n",
+    "\n",
+    "plt.figure(figsize=(14,5))\n",
+    "colors = ['b', 'g', 'r', 'c', 'm', 'y']\n",
+    "for index, cluster in enumerate(clusters):\n",
+    "    for sample in clusters[cluster]['members']:\n",
+    "      plt.plot(measurements_per_sample[sample], label=sample, color=colors[index % len(colors)])\n",
+    "plt.title(data['curve'] + ' using math ' + data['math'] + ' per sample')\n",
+    "plt.xlabel('sample')\n",
+    "plt.ylabel('time')\n",
+    "plt.legend(ncol=3)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(14, 5))\n",
+    "parts = plt.violinplot(measurements_per_sample.values())\n",
+    "for i, pc in enumerate(parts['bodies']):\n",
+    "    sample_name = list(measurements_per_sample.keys())[i]\n",
+    "    for cluster_idx, cluster_info in clusters.items():\n",
+    "        if sample_name in cluster_info['members']:\n",
+    "            pc.set_facecolor(colors[cluster_idx % len(colors)])\n",
+    "            pc.set_edgecolor(colors[cluster_idx % len(colors)])\n",
+    "            break\n",
+    "plt.xticks(list(range(1, len(measurements_per_sample.keys()) + 1)), measurements_per_sample.keys())\n",
+    "plt.title(data['curve'] + ' using math ' + data['math'])\n",
+    "plt.ylabel('time')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "columns = 2\n",
+    "rows = mathlib.ceil(len(clusters) / columns)\n",
+    "fig, axes = plt.subplots(rows, columns, figsize=(14, 5*rows))\n",
+    "\n",
+    "for row in range(0, rows):\n",
+    "    for column in range(0, columns):\n",
+    "        axe = axes[row][column] if rows > 1 else axes[column]\n",
+    "        cluster = row * columns + column\n",
+    "        if cluster >= len(clusters):\n",
+    "            fig.delaxes(axe)\n",
+    "            continue\n",
+    "\n",
+    "        for sample in clusters[cluster]['members']:\n",
+    "            axe.plot(measurements_per_sample[sample], label=sample)\n",
+    "\n",
+    "        axe.set_xlabel('measurement')\n",
+    "        axe.set_ylabel('time')\n",
+    "        axe.set_title('Cluster: ' + str(cluster))\n",
+    "        axe.legend(ncol=2)\n",
+    "\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 4.2 Quantify impact\n",
+    "\n",
+    "Now we choose the extreme clusters, and compare their averages."
+   ]
   }
  ],
  "metadata": {
