test: Analyse phpecc, and document result

--- a/tests/consttime/analyse.ipynb
+++ b/tests/consttime/analyse.ipynb
@@ -63,7 +63,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import json\n",
-    "import math as mathlib\n"
+    "import math as mathlib\n",
+    "import os\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -97,7 +98,17 @@
     "  with open(file_path, 'r') as f:\n",
     "    return json.load(f)\n",
     "\n",
-    "data = load_json_from_file('measurements/MG_TwED_ANeg1_Math_curve25519_200.json')"
+    "# data = load_json_from_file('measurements/SW_QT_ANeg3_Math_brainpoolP256r1_200.json')\n",
+    "\n",
+    "all_data = [\n",
+    "    load_json_from_file('measurements/PhpeccMath_brainpool256r1_69.json'),\n",
+    "    load_json_from_file('measurements/PhpeccMath_brainpool256r1_76.json'),\n",
+    "    load_json_from_file('measurements/PhpeccMath_brainpool256r1_85.json'),\n",
+    "]\n",
+    "data = all_data[0]\n",
+    "for index, more_data in enumerate(all_data):\n",
+    "    for sample_index, sample in enumerate(more_data['samples']):\n",
+    "        data['samples'][sample_index]['measurements'].extend(sample['measurements'])"
    ],
    "outputs": [],
    "execution_count": null
@@ -459,7 +470,7 @@
     "    # Sort groups by mean value\n",
     "    return dict(sorted(sorted_groups.items(), key=lambda x: x[1]['mean']))\n",
     "\n",
-    "expected_clusters = 3\n",
+    "expected_clusters = 6\n",
     "average_per_sample = get_average_per_sample(measurements_per_sample)\n",
     "clusters = cluster_averages(average_per_sample, expected_clusters)\n",
     "\n",
